# GITM

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  cert.crt  cert.key
cmake/: FindBrotli.cmake
src/: cert.cpp  cert.h  helper.h  http_highlighter.cpp  http_highlighter.h  http_parser.cpp  http_parser.h  http_request_parser.cpp  http_request_parser.h  http_response_parser.cpp  http_response_parser.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  old_proxy.cpp  old_proxy.h  pending_sessions_list_model.cpp  pending_sessions_list_model.h  server.cpp  server.h  session.cpp  session.h
src/http_parser/: http_parser.cpp  http_parser.h  http_request_parser.cpp  http_request_parser.h  http_response_parser.cpp  http_response_parser.h
